Removed log4j, moved tests
Signed-off-by: Marc-Antoine Gouillart <marsu_pilami@msn.com>