@@ -10,289 +10,21 @@
 
 	<name>${project.groupId}:${project.artifactId}</name>
 	<url>http://jqm.readthedocs.org</url>
+	<description>A library containing the JQM engine. Cannot be used alone.</description>
 
-	<properties>
-		<modelJarName>./lib/jqm-model-${project.version}.jar</modelJarName>
-		<argLine>-Xms256m -Xmx1024m -XX:MaxPermSize=512m</argLine>
-	</properties>
 
 	<build>
-		<resources>
-			<resource>
-				<directory>src/main/resources</directory>
-				<filtering>true</filtering>
-			</resource>
-		</resources>
-		<testResources>
-			<testResource>
-				<directory>src/test/resources</directory>
-				<filtering>true</filtering>
-			</testResource>
-		</testResources>
-
 		<plugins>
-			<plugin>
-				<!-- Build an executable JAR -->
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-jar-plugin</artifactId>
-				<version>2.4</version>
-				<configuration>
-					<archive>
-						<manifest>
-							<addClasspath>true</addClasspath>
-							<classpathPrefix>lib/</classpathPrefix>
-							<mainClass>com.enioka.jqm.tools.Main</mainClass>
-						</manifest>
-						<manifestEntries>
-							<Class-Path>conf/</Class-Path>
-						</manifestEntries>
-					</archive>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.4</version>
-				<configuration>
-					<descriptors>
-						<descriptor>src/main/assembly/main-package.xml</descriptor>
-					</descriptors>
-					<finalName>jqm-${project.version}</finalName>
-					<appendAssemblyId>false</appendAssemblyId>
-				</configuration>
-				<executions>
-					<execution>
-						<id>make-assembly</id> <!-- this is used for inheritance merges -->
-						<phase>package</phase> <!-- bind to the packaging phase -->
-						<goals>
-							<goal>single</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.6</version>
-				<executions>
-					<execution>
-						<id>copy-payloads</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>${basedir}/target/payloads</outputDirectory>
-							<resources>
-								<resource>
-									<directory>${basedir}/src/test/resources/payloads</directory>
-									<filtering>false</filtering>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<!-- Create ext and lib directories for tests -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-dependency-plugin</artifactId>
-				<version>2.8</version>
-				<configuration>
-					<skip>false</skip>
-				</configuration>
-				<executions>
-					<execution>
-						<id>copy</id>
-						<phase>process-test-classes</phase>
-						<goals>
-							<goal>copy</goal>
-						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>org.hsqldb</groupId>
-									<artifactId>hsqldb</artifactId>
-									<version>${hsqldb.version}</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>org.postgresql</groupId>
-									<artifactId>postgresql</artifactId>
-									<version>42.1.1.jre6</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>mysql</groupId>
-									<artifactId>mysql-connector-java</artifactId>
-									<version>5.1.41</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>com.h2database</groupId>
-									<artifactId>h2</artifactId>
-									<version>${h2.version}</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>org.apache.tomcat</groupId>
-									<artifactId>tomcat-jdbc</artifactId>
-									<version>${pool.version}</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>org.apache.tomcat</groupId>
-									<artifactId>tomcat-juli</artifactId>
-									<version>${pool.version}</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>com.enioka.jqm</groupId>
-									<artifactId>jqm-providers</artifactId>
-									<version>${project.version}</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>com.enioka.jqm</groupId>
-									<artifactId>jqm-api</artifactId>
-									<version>${project.version}</version>
-								</artifactItem>
-								<dependency>
-									<groupId>com.sun.mail</groupId>
-									<artifactId>javax.mail</artifactId>
-									<version>${mail.version}</version>
-								</dependency>
-								<dependency>
-									<groupId>com.sun.mail</groupId>
-									<artifactId>smtp</artifactId>
-									<version>${mail.version}</version>
-								</dependency>
-
-							</artifactItems>
-							<outputDirectory>${project.basedir}/ext</outputDirectory>
-						</configuration>
-					</execution>
-
-					<execution>
-						<id>copy2</id>
-						<phase>process-test-classes</phase>
-						<goals>
-							<goal>copy</goal>
-						</goals>
-						<configuration>
-							<artifactItems>
-								<artifactItem>
-									<groupId>${project.groupId}</groupId>
-									<artifactId>jqm-api</artifactId>
-									<version>${project.version}</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>${project.groupId}</groupId>
-									<artifactId>jqm-runner-basic</artifactId>
-									<version>${project.version}</version>
-								</artifactItem>
-								<artifactItem>
-									<groupId>${project.groupId}</groupId>
-									<artifactId>jqm-runner-spring</artifactId>
-									<version>${project.version}</version>
-								</artifactItem>
-							</artifactItems>
-							<outputDirectory>${project.basedir}/plugins</outputDirectory>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
-
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${surefire.version}</version>
-				<configuration>
-					<trimStackTrace>false</trimStackTrace>
-					<systemProperties>
-						<property>
-							<name>mavenVersion</name>
-							<value>${project.version}</value>
-						</property>
-					</systemProperties>
-				</configuration>
-			</plugin>
-
-			<plugin>
-				<groupId>com.btmatthews.maven.plugins</groupId>
-				<artifactId>emailserver-maven-plugin</artifactId>
-				<version>1.1.1</version>
-
-				<configuration>
-					<monitorKey>emailserver</monitorKey>
-					<monitorPort>11025</monitorPort>
-				</configuration>
-
-				<executions>
-					<execution>
-						<id>run-mail</id>
-						<goals>
-							<goal>run</goal>
-						</goals>
-						<phase>process-test-classes</phase>
-						<configuration>
-							<daemon>true</daemon>
-							<type>greenmail</type>
-							<portOffset>10000</portOffset>
-							<useSSL>false</useSSL>
-							<mailboxes>
-								<mailbox>
-									<login>testlogin</login>
-									<password>testpassword</password>
-									<email>test@jqm.com</email>
-								</mailbox>
-							</mailboxes>
-						</configuration>
-					</execution>
-					<execution>
-						<id>stop-mail</id>
-						<goals>
-							<goal>stop</goal>
-						</goals>
-						<phase>post-integration-test</phase>
-					</execution>
-				</executions>
-			</plugin>
+			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-resources-plugin</artifactId> 
+				<version>2.6</version> <executions> <execution> <id>copy-payloads</id> <phase>compile</phase> 
+				<goals> <goal>copy-resources</goal> </goals> <configuration> <outputDirectory>${basedir}/target/payloads</outputDirectory> 
+				<resources> <resource> <directory>${basedir}/src/test/resources/payloads</directory> 
+				<filtering>false</filtering> </resource> </resources> </configuration> </execution> 
+				</executions> </plugin> -->
 		</plugins>
 	</build>
 
-
-
 	<dependencies>
-		<!-- CLI parsing -->
-		<dependency>
-			<groupId>commons-cli</groupId>
-			<artifactId>commons-cli</artifactId>
-			<version>1.2</version>
-		</dependency>
-
-		<!-- Maven integration -->
-		<dependency>
-			<groupId>org.jboss.shrinkwrap.resolver</groupId>
-			<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
-			<version>2.2.2</version>
-		</dependency>
-
-		<!-- LOGGING (we directly use log4j in this project but we need a slf4j 
-			mapping for the web app) -->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>jul-to-slf4j</artifactId>
-			<version>${slf4j.version}</version>
-		</dependency>
-
-		<!-- Security artifacts -->
-		<dependency>
-			<groupId>com.enioka.jqm</groupId>
-			<artifactId>jqm-pki</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.shiro</groupId>
-			<artifactId>shiro-web</artifactId>
-			<version>${shiro.version}</version>
-		</dependency>
 
 		<!-- JQM APIs -->
 		<dependency>
@@ -306,19 +38,11 @@
 			<version>${project.version}</version>
 		</dependency>
 
-
-		<!-- Connection pooling. Test - only put in ext dir, not lib -->
+		<!-- Maven integration -->
 		<dependency>
-			<groupId>org.apache.tomcat</groupId>
-			<artifactId>tomcat-jdbc</artifactId>
-			<version>${pool.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.enioka.jqm</groupId>
-			<artifactId>jqm-providers</artifactId>
-			<version>${project.version}</version>
-			<scope>test</scope>
+			<groupId>org.jboss.shrinkwrap.resolver</groupId>
+			<artifactId>shrinkwrap-resolver-impl-maven</artifactId>
+			<version>2.2.2</version>
 		</dependency>
 
 		<!-- Scheduling -->
@@ -326,86 +50,6 @@
 			<groupId>it.sauronsoftware.cron4j</groupId>
 			<artifactId>cron4j</artifactId>
 			<version>2.2.5</version>
-		</dependency>
-
-
-		<!-- TEST DEPENDENCIES -->
-		<dependency>
-			<groupId>org.hsqldb</groupId>
-			<artifactId>hsqldb</artifactId>
-			<version>${hsqldb.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.postgresql</groupId>
-			<artifactId>postgresql</artifactId>
-			<version>42.1.1.jre6</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.41</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>com.enioka.jqm</groupId>
-			<artifactId>jqm-test-helpers</artifactId>
-			<version>${project.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.enioka.jqm</groupId>
-			<artifactId>jqm-xml</artifactId>
-			<version>${project.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-		<!-- MAIL is only test scope - it is put inside ext and only used during 
-			tests -->
-		<dependency>
-			<groupId>com.sun.mail</groupId>
-			<artifactId>javax.mail</artifactId>
-			<version>${mail.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.sun.mail</groupId>
-			<artifactId>smtp</artifactId>
-			<version>${mail.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-
-
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>jqm-runner-basic</artifactId>
-			<version>${project.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>${project.groupId}</groupId>
-			<artifactId>jqm-runner-spring</artifactId>
-			<version>${project.version}</version>
-			<scope>test</scope>
-		</dependency>
-
-
-		<dependency>
-			<groupId>com.enioka.jqm</groupId>
-			<artifactId>jqm-ws</artifactId>
-			<version>${project.version}</version>
-			<type>war</type>
-			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
